<resources>
    <string name="app_name" translatable="false">Timetable for HSE</string>
    <string name="timetable_for_students">Timetable for students</string>
    <string name="timetable_for_teachers">Timetable for teachers</string>
    <string name="choose_student">Student</string>
    <string name="now">"Now: "</string>
    <string name="timetable_for_day">Timetable for day</string>
    <string name="timetable_for_week">Timetable for week</string>
    <string name="subject">Subject</string>
    <string name="no_classes">No classes</string>
    <string name="classroom">Classroom</string>
    <string name="corp">Building</string>
    <string name="teacher">Teacher</string>
    <string name="choose_teacher">Teacher</string>
    <string name="settings">Settings</string>
    <string name="your_photo">Your photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="your_name">Your name</string>
    <string name="light_level">Light level:</string>
    <string name="save_settings">Save settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="warning_null_name">Enter your name, please</string>
    <string name="no_data_message">No data</string>
</resources>