<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/hse"/>

    <Button
        android:id="@+id/tmtblstudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timetable_for_students"
        android:textSize="18sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tmtblTeachers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/tmtblTeachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timetable_for_teachers"
        android:layout_margin="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:text="@string/settings"
        style="@style/secondaryButton"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>